--- a/starter-files/gatsby/package.json
+++ b/starter-files/gatsby/package.json
@@ -19,7 +19,8 @@
       "wesbos"
     ],
     "rules": {
-      "react/prop-types": 0
+      "react/prop-types": 0,
+      "indent": [4, "tab"]
     }
   },
   "dependencies": {
