--- a/starter-files/sanity/package.json
+++ b/starter-files/sanity/package.json
@@ -16,7 +16,11 @@
   "eslintConfig": {
     "extends": [
       "wesbos"
-    ]
+    ],
+    "rules": {
+      "react/prop-types": 0,
+      "indent": [4, "tab"]
+    }
   },
   "dependencies": {
     "@sanity/base": "1.150.7",
