--- a/starter-files/gatsby/package.json
+++ b/starter-files/gatsby/package.json
@@ -20,7 +20,10 @@
     ],
     "rules": {
       "react/prop-types": 0,
-      "indent": [4, "tab"]
+      "indent": [
+        4,
+        "tab"
+      ]
     }
   },
   "dependencies": {
@@ -34,6 +37,7 @@
     "isomorphic-fetch": "^2.2.1",
     "netlify-cli": "^2.62.0",
     "netlify-lambda": "^2.0.1",
+    "nodemailer": "^6.4.18",
     "normalize.css": "^8.0.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
